@@ -30,6 +30,9 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
   * dh_fixperms: Correct permissions of reportbug files and scripts.
     Thanks to Fabian Greffrath for the report and a basic patch.
     (Closes: #459548)
+  * The "ant" build system now loads debian/ant.properties
+    automatically before build and clean (like CDBS).  Thanks to
+    Thomas Koch for the report.  (Closes: #563909)
 
   [ Bernhard R. Link ]
   * Dh_lib: apply patch from Guillem Jover to support case-insensitive
